--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="">
-    <title>XXX</title>
+    <link rel="icon" href="img/bootstrap-brands.svg">
+    <title>Bootstrap</title>
 </head>
 <body>
     <!-- HEADER -->
@@ -17,7 +17,8 @@
         
             <nav class="navbar w-100 navbar-expand-lg navbar-light justify-content-md-around" >
                 <div class="container">
-                  <a id="home" class="navbar-brand d-flex text-white fw-bolder" href="#jumbotron">BOOTSTRAP</a>
+                  <a id="boot" class="navbar-brand d-flex text-white fw-bolder" href="#jumbotron">BOOTSTRAP</a>
+                  <!-- <a id="start-boot" class="navbar-brand d-flex text-white fw-bolder" href="#jumbotron">START BOOTSTRAP</a> -->
                   <button id="burger" class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span id="slices" class="navbar-toggler-icon d-flex d-lg-none"></span>
                   </button>
